--- a/agriculture/package.json
+++ b/agriculture/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "bootstrap-icons": "^1.11.3",
+    "express": "^4.18.2",
+    "http": "^0.0.1-security",
+    "mongoose": "^8.1.3",
+    "nodemon": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
