--- a/agriculture/package.json
+++ b/agriculture/package.json
@@ -7,14 +7,20 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "proxy": "http://localhost:8080"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bootstrap-icons": "^1.11.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "mongoose": "^8.2.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.10",
     "nodemon": "^3.0.3",
+    "otp-generator": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
