--- a/agriculture/package.json
+++ b/agriculture/package.json
@@ -14,7 +14,11 @@
     "bcrypt": "^5.1.1",
     "bootstrap-icons": "^1.11.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "ethereumjs-tx": "^2.1.2",
+    "ethers": "^6.11.1",
     "express": "^4.18.2",
+    "hardhat": "^2.20.1",
     "http": "^0.0.1-security",
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
@@ -24,7 +28,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
-    "three": "^0.161.0"
+    "three": "^0.161.0",
+    "web3": "^4.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
