--- a/agriculture/package.json
+++ b/agriculture/package.json
@@ -32,6 +32,7 @@
     "web3": "^4.5.0"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react-swc": "^3.5.0",
