--- a/agriculture/.env
+++ b/agriculture/.env
@@ -1,1 +1,2 @@
-VITE_API_URL = https://cautious-space-waffle-7v94qj5rxx4pfvj7-5000.app.github.dev/
+#VITE_API_URL = https://cautious-space-waffle-7v94qj5rxx4pfvj7-5000.app.github.dev/
+VITE_API_URL = http://localhost:5000/
