--- a/agriculture/package.json
+++ b/agriculture/package.json
@@ -19,6 +19,7 @@
     "ethereumjs-tx": "^2.1.2",
     "ethers": "^6.11.1",
     "express": "^4.18.2",
+    "framer-motion": "^11.0.8",
     "hardhat": "^2.20.1",
     "http": "^0.0.1-security",
     "mongoose": "^8.2.0",
@@ -29,6 +30,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
+    "react-scroll": "^1.9.0",
     "three": "^0.161.0",
     "web3": "^4.5.0"
   },
