--- a/agriculture/package.json
+++ b/agriculture/package.json
@@ -11,6 +11,9 @@
     "proxy": "http://localhost:8080"
   },
   "dependencies": {
+    "@helia/json": "^3.0.1",
+    "@helia/strings": "^3.0.1",
+    "@helia/unixfs": "^3.0.1",
     "awesome-snackbar": "^2.0.7",
     "bcrypt": "^5.1.1",
     "bootstrap-icons": "^1.11.3",
@@ -20,13 +23,18 @@
     "ethers": "^6.11.1",
     "express": "^4.18.2",
     "framer-motion": "^11.0.8",
+    "fs": "^0.0.1-security",
     "hardhat": "^2.20.1",
+    "helia": "^4.0.2",
     "http": "^0.0.1-security",
+    "ipfs-http-client": "^60.0.1",
+    "kubo-rpc-client": "^3.0.4",
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.10",
     "nodemon": "^3.0.3",
     "otp-generator": "^4.0.1",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
