--- a/agriculture/package.json
+++ b/agriculture/package.json
@@ -11,24 +11,20 @@
     "proxy": "http://localhost:8080"
   },
   "dependencies": {
-    "@helia/json": "^3.0.1",
-    "@helia/strings": "^3.0.1",
-    "@helia/unixfs": "^3.0.1",
+    "@helia/unixfs": "^3.0.2",
     "awesome-snackbar": "^2.0.7",
     "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "ethereumjs-tx": "^2.1.2",
-    "ethers": "^6.11.1",
     "express": "^4.18.2",
     "framer-motion": "^11.0.8",
     "fs": "^0.0.1-security",
-    "hardhat": "^2.20.1",
-    "helia": "^4.0.2",
+    "hardhat": "^2.22.1",
+    "helia": "^4.1.0",
     "http": "^0.0.1-security",
-    "ipfs-http-client": "^60.0.1",
-    "kubo-rpc-client": "^3.0.4",
+    "mdb-react-ui-kit": "^7.2.0",
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.10",
@@ -36,10 +32,11 @@
     "otp-generator": "^4.0.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scroll": "^1.9.0",
-    "three": "^0.161.0",
+    "util-deprecate": "^1.0.2",
     "web3": "^4.5.0"
   },
   "devDependencies": {
