--- a/agriculture/package.json
+++ b/agriculture/package.json
@@ -24,6 +24,7 @@
     "hardhat": "^2.22.1",
     "helia": "^4.1.0",
     "http": "^0.0.1-security",
+    "loading-spinner": "^1.2.1",
     "mdb-react-ui-kit": "^7.2.0",
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
@@ -34,6 +35,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^6.1.6",
+    "react-loading-ui": "^1.3.0",
     "react-router-dom": "^6.21.3",
     "react-scroll": "^1.9.0",
     "util-deprecate": "^1.0.2",
