--- a/agriculture/backend/config.json
+++ b/agriculture/backend/config.json
@@ -1,4 +1,3 @@
 {
-  "contractAddress": "0x948B3c65b89DF0B4894ABE91E6D02FE579834F8F",
-  "walletAddress": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
+  "contractAddress": "0x948B3c65b89DF0B4894ABE91E6D02FE579834F8F"
 }
