--- a/agriculture/package.json
+++ b/agriculture/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@helia/unixfs": "^3.0.2",
+    "@openzeppelin/contracts": "^5.0.2",
     "awesome-snackbar": "^2.0.7",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
