--- a/agriculture/package.json
+++ b/agriculture/package.json
@@ -11,8 +11,6 @@
     "proxy": "http://localhost:8080"
   },
   "dependencies": {
-    "@helia/core": "^0.0.0",
-    "@helia/unixfs": "^3.0.2",
     "@openzeppelin/contracts": "^5.0.2",
     "awesome-snackbar": "^2.0.7",
     "bcrypt": "^5.1.1",
@@ -24,11 +22,9 @@
     "framer-motion": "^11.0.8",
     "fs": "^0.0.1-security",
     "hardhat": "^2.22.1",
-    "helia": "^4.1.0",
     "http": "^0.0.1-security",
-    "loading-spinner": "^1.2.1",
+    "ipfs-core": "^0.18.1",
     "mappls-web-maps": "^3.0.4",
-    "mdb-react-ui-kit": "^7.2.0",
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.10",
@@ -37,14 +33,9 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
-    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
-    "react-loader-spinner": "^6.1.6",
-    "react-loading-ui": "^1.3.0",
     "react-router-dom": "^6.21.3",
     "react-scroll": "^1.9.0",
-    "use-timer": "^2.0.1",
-    "util-deprecate": "^1.0.2",
     "web3": "^4.5.0"
   },
   "devDependencies": {
