--- a/agriculture/package.json
+++ b/agriculture/package.json
@@ -34,6 +34,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.21.3",
     "react-scroll": "^1.9.0",
     "web3": "^4.5.0"
