--- a/admin/package.json
+++ b/admin/package.json
@@ -14,6 +14,7 @@
     "@esbuild/win32-x64": "^0.20.1",
     "@vitejs/plugin-react": "^4.2.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
