--- a/admin/package.json
+++ b/admin/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@esbuild/win32-x64": "^0.20.1",
     "@vitejs/plugin-react": "^4.2.1",
+    "chart.js": "^4.4.2",
+    "faker": "^6.6.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0"
