--- a/agriculture/backend/config.json
+++ b/agriculture/backend/config.json
@@ -1,3 +1,4 @@
 {
-  "contractAddress": "0x5FbDB2315678afecb367f032d93F642f64180aa3"
+  "contractAddress": "0x610178dA211FEF7D417bC0e6FeD39F05609AD788",
+  "walletAddress": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
 }
