--- a/agriculture/package.json
+++ b/agriculture/package.json
@@ -13,17 +13,22 @@
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
     "awesome-snackbar": "^2.0.7",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "form-data": "^4.0.0",
     "framer-motion": "^11.0.8",
     "fs": "^0.0.1-security",
     "hardhat": "^2.22.1",
     "http": "^0.0.1-security",
+    "ipfs": "^0.66.1",
+    "ipfs-api": "^26.1.2",
     "ipfs-core": "^0.18.1",
+    "ipfs-http-client": "^60.0.1",
     "mappls-web-maps": "^3.0.4",
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
