--- a/admin/package.json
+++ b/admin/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@esbuild/win32-x64": "^0.20.1",
     "@vitejs/plugin-react": "^4.2.1",
+    "awesome-snackbar": "^2.0.7",
     "chart.js": "^4.4.2",
     "faker": "^6.6.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "web3": "^4.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
