--- a/agriculture/backend/config.json
+++ b/agriculture/backend/config.json
@@ -1,4 +1,4 @@
 {
-  "contractAddress": "",
-  "walletAddress": ""
+  "contractAddress": "0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0",
+  "walletAddress": "0x3C44CdDdB6a900fa2b585dd299e03d12FA4293BC"
 }
