--- a/agriculture/package.json
+++ b/agriculture/package.json
@@ -42,6 +42,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.21.3",
     "react-scroll": "^1.9.0",
+    "styled-components": "^6.1.8",
     "web3": "^4.5.0"
   },
   "devDependencies": {
