--- a/agriculture/package.json
+++ b/agriculture/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "deploy":"hardhat run scripts/deploy.cjs --network localhost",
+    "server":"cd backend && npx nodemon index.cjs",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "proxy": "http://localhost:8080"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
@@ -25,10 +26,6 @@
     "fs": "^0.0.1-security",
     "hardhat": "^2.22.1",
     "http": "^0.0.1-security",
-    "ipfs": "^0.66.1",
-    "ipfs-api": "^26.1.2",
-    "ipfs-core": "^0.18.1",
-    "ipfs-http-client": "^60.0.1",
     "mappls-web-maps": "^3.0.4",
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
@@ -42,8 +39,6 @@
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.21.3",
     "react-scroll": "^1.9.0",
-    "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.8",
     "web3": "^4.5.0"
   },
