--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,10 @@
     "awesome-snackbar": "^2.0.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "dotenv": "^16.4.5",
     "form-data": "^4.0.0",
     "framer-motion": "^11.0.8",
     "fs": "^0.0.1-security",
-    "hardhat": "^2.22.1",
     "http": "^0.0.1-security",
     "mappls-web-maps": "^3.0.4",
     "path": "^0.12.7",
